--- a/EndangeredSpecies.html
+++ b/EndangeredSpecies.html
@@ -9,7 +9,7 @@
 <!--==============================header=================================-->
 	<header> 
 	<div style="margin-left:auto; margin-right:auto; width:940px ">
-	<a href="index.html"><img src="images/logo.webp" alt="logo" style="height:100px; width:100px;"></a>
+	<a href="Index.html"><img src="images/logo.webp" alt="logo" style="height:100px; width:100px;"></a>
 		
 		<div class="menu_block">
 			<nav>
