--- a/Survey.html
+++ b/Survey.html
@@ -38,7 +38,7 @@
 			<center>   
 			<h3>Please do a survey for us!</h3>
 			<img src="images/E64-fOuX0AIYTQv.png" alt="" class="img_inner">
-				<div class="text1"><a href="https://forms.gle/MaFmF2ghZGxJc3fR6" rel="dofollow">Click here to do a survey for us!</a></div>
+				<div class="text1"><a href="https://forms.gle/MaFmF2ghZGxJc3fR6" rel="dofollow" target=_blank>Click here to do a survey for us!</a></div>
 				
 			</center>
 			
@@ -46,6 +46,6 @@
 	</div>
 
 <!--==============================footer=================================-->
-	<
+		
 </body>
 </html>
